--- a/r-s.css
+++ b/r-s.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;700&display=swap');
 body{
     display: flex;
     justify-content: center;
